# napari-crop-tool

./: .gitignore  README.md  conda-lock.yml  environment.yml  napari.yaml  pyproject.toml
src/napari_crop_tool/: __init__.py  _utils.py  _widget.py  napari.yaml  widget.py
src/napari_crop_tool/cropping/: controller.py  gui.py  model.py
src/napari_crop_tool/layer_selection/: controller.py  gui.py  model.py
